--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "pump": "^1.0.2"
   },
   "dependencies": {
+    "bower": "^1.8.2",
+    "slick-carousel": "^1.8.1",
     "wiredep": "^4.0.0"
   }
 }
