--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,10 @@
   "name": "creative-agency-bootstrap",
   "description": "Creative agency with Bootrstrap",
   "main": "gulpfile.js",
-  "author": "Nastya",
+  "author": "leha",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components"
-  ],
-  "devDependencies": {
-    "foundation-sites": "^6.4.3"
-  }
+  ]
 }
